# multimodal_recorder

./: .gitignore  README.md  requirements.txt
configs/: camera_calibration.py  camera_intrinsics.npz  imuCalibration.py  imu_mag_calibration_offline.npz  offline_imuCalibration.py  usb_cam_calib_params.npz
imu/: calibMPU9250.json
ros2/: README.md
ros2/src/: raspberry_info.txt  requirements.txt
ros2/src/audio/: package.xml  setup.py
ros2/src/droneaudition_msgs/: CMakeLists.txt  package.xml
ros2/src/droneaudition_msgs/msg/: AudioLoc.msg  AudioRaw.msg  IMURaw.msg  Quat.msg  VideoRaw.msg
ros2/src/fuse/: package.xml  setup.cfg  setup.py
ros2/src/imu/: package.xml  setup.py
ros2/src/video/: package.xml  setup.py
src/io/: dataset.py  exporter.py  rosbag.py  utils.py
src/processing/audio/: main_audio.py
src/processing/conversion/: bag_to_files.py
src/processing/imu/: imu_main.py  imu_utils.py  main_imu.py  utils_imu.py  visualize.py  visualize_imu.py
src/processing/multimodal/: fuse_audio_imu.py  fuse_audio_video.py  fuse_imu_video.py  fuse_multimodal.py  visualize_multimodal.py
src/processing/video/: main_video.py  reconstruct_video.py  utils_video.py
src/recording/: filewriter_process.py  imu_process.py  main_imu_recorder.py  main_recorder.py
src/recording/audio/: audio_filewriter.py  audio_process.py  filewriter_process.py  main_audio_recorder.py
src/recording/imu/: main_imu_recorder.py
src/recording/video/: filewriter_process.py  main_video_recorder.py  video_filewriter.py  (+1 more)
src/utils/: io.py  referential_change.py  visualize.py
(+55 files in other folders)
